--- a/src/yunpian.ini
+++ b/src/yunpian.ini
@@ -20,3 +20,4 @@ yp.sms.host = https://sms.yunpian.com
 yp.voice.host = https://voice.yunpian.com
 yp.flow.host = https://flow.yunpian.com
 yp.call.host = https://call.yunpian.com
+yp.vsms.host = https://vsms.yunpian.com
